deploy/ingress-rules.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkmicroservice-ingress
spec:
  rules:
  - http:
      paths:
      - path: /gateway
        pathType: Prefix
        backend:
          service:
            name: linkmicroservice-service
            port:
              number: 80
